# Research-assistant

./: .env  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0da0346d327f_add_chat_documents_relation_and_.py  4888f9453d13_create_documents_table.py  963b580a1928_convert_chat_documents_to_one_to_many.py  bbfd9ea70e5b_updated_models_for_document.py
app/: main.py
app/agents/: __init__.py  base.py  evaluator.py  planner.py  prompts.py  refinement_controller.py  retriver.py  synthesizer.py
app/core/: __init__.py  config.py  database.py  llm.py  relation_database.py
app/exceptions/: __init__.py  document_exceptions.py
app/llm/: llm.py
app/memory/: __init__.py  redis_client.py  session_store.py
app/models/: Document.py  __init__.py  agents.py  chat.py  memory.py
app/repositories/: __init__.py  chat_repository.py  document_repository.py
app/routes/: __init__.py  chat.py  files_router.py  query_router.py
app/schema/: __init__.py  chat.py  document.py  query.py
app/services/: __init__.py  chat_service.py  files_service.py  prompt_generation.py  query_service.py  text_chunker.py  vector_embedings.py
docker/: docker-compose.yaml
