[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "chromadb>=1.3.7",
    "fastapi>=0.127.0",
    "langchain-openai>=1.1.6",
    "langchain-text-splitters>=1.1.0",
    "openai>=2.14.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.7",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
    "tenacity>=9.1.2",
    "uvicorn>=0.40.0",
]

[tool.uv.workspace]
members = [
    "frontend",
]
